fix clipping iphone

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 html,
 body {
+  min-height: 100%;
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
@@ -25,7 +26,6 @@ body {
 
   background: rgb(2, 0, 36);
   background: linear-gradient(132deg, rgba(2, 0, 36, 1) 0%, rgba(12, 0, 31, 1) 16%, rgba(59, 0, 143, 1) 100%);
-  background-size: cover;
   color: rgb(255, 255, 255);
 }
 
